<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <item-->
    <!--        android:id="@+id/navigation_start"-->
    <!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
    <!--        android:eventTitle="@string/title_start"-->
    <!--        android:visible="false" />-->
    <item
        android:id="@+id/navigation_month"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_month" />
    <item
        android:id="@+id/navigation_week"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_week" />
    <item
        android:id="@+id/navigation_new_event"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_new_event" />
    <item
        android:id="@+id/navigation_day"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_day" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_schedule" />
</menu>
