<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.eventCreateFragment.EventCreateFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_placeholder"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/title_placeholder" />

        <com.truefinch.enceladus.ui.custom_views.CustomDateTimePickerView
            android:id="@+id/startDateTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:date_time_label="@string/date_time_label_start" />

        <com.truefinch.enceladus.ui.custom_views.CustomDateTimePickerView
            android:id="@+id/endDateTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:date_time_label="@string/date_time_label_end" />

    </LinearLayout>

</FrameLayout>